[package]
name = "sketches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18"
nannou_touchosc = { git = "https://github.com/mmansion/nannou_touchosc", branch = "main" }
itertools = "0.10"
kd-tree = "0.4"
typenum = "1.14"

[[example]]
name = "altedu"
path = "altedu/main.rs"

[[example]]
name = "convex_vertex"
path = "examples/curve_vertex.rs"

[[example]]
name = "curve"
path = "examples/curve.rs"

[[example]]
name = "scribble_line"
path = "examples/scribble_line.rs"
